--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <ul>
+  <ul class="index-list">
     <li><a href="./recipes/garlic-bread.html">Grilled Garlic Bread</a></li> 
     <li><a href="./recipes/flank-steak.html">Tuscan Flanked Steak</a></li>
     <li><a href="./recipes/hash-browns.html">Classic Hash Browns</a></li>
